Fixed the issue of image getting cropped for 3rd card on small screen

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ button:hover, .button1:hover {
 }
 
 .card {
-  background: rgb(233, 234, 238);
+  background: transparent;
   width: 420px;
   margin: 10px;
   display: flex;
@@ -631,13 +631,6 @@ input[type="submit"] {
 
   .card {
     height: 540px;
-  }
-
-  .car-3 {
-    background-image: url(./images/cardimage3.webp);
-    background-size: cover;
-    height: 300px;
-    width: 100%;
   }
 
   .heading, .heading1 {
